<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation,MissingTranslation" tools:locale="en">
    <string name="app_name" translatable="false">QuickWeather</string>
    <string name="format_uvi">%.1f UV Index</string>
    <string name="format_feelslike">Feels like %s</string>
    <string name="format_visibility">%s Visibility</string>
    <string name="format_dewpoint">%s Dew Point</string>
    <string name="format_humidity">%s Humidity</string>
    <string name="format_alert">Active until %1$s</string>
    <string name="format_separator">", "</string>
    <string name="format_precipitation_chance">%1$s chance of %2$s</string>
    <string name="format_forecast_temp">%1$s / %2$s</string>
    <string name="format_pressure">%1$d hPa</string>
    <string name="format_precipitation_start" tools:ignore="PluralsCandidate">%1$s in %2$d mins</string>
    <string name="format_precipitation_end" tools:ignore="PluralsCandidate">%1$s ending in %2$d mins</string>
    <string name="format_forecast_title">%1$s - %2$s</string>
    <string name="icon_weather_desc">Current Weather</string>
    <string name="icon_alert_desc">Alert</string>
    <string name="icon_my_location_desc">My Location</string>
    <string name="forecast_desc">Forecast</string>
    <string name="text_current_location">My Location</string>
    <string name="text_settings">Settings</string>
    <string name="text_locations">Locations</string>
    <string name="text_no_location">No Locations Chosen</string>
    <string name="text_today">Today</string>
    <string name="text_invalid_api_key">Invalid API Key</string>
    <string name="text_invalid_api_key_or_instance">Invalid API Key or Instance</string>
    <string name="text_invalid_subscription">QuickWeather requires the \"One Call by Call\" subscription</string>
    <string name="text_required">Required</string>
    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/QuickWeather/PrivacyPolicy">Privacy Policy</a></string>
    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_open">Open</string>
    <string name="text_check_for_updates">Check for Updates</string>
    <string name="text_whats_new">What\'s New?</string>
    <string name="text_report_a_bug">Report a Bug</string>
    <string name="text_no_new_version">You\'re on the latest version</string>
    <string name="text_new_version_available">New Version Available!</string>
    <string name="text_error">Error</string>
    <string name="text_error_new_version">Error occurred checking for new version</string>
    <string name="text_error_getting_release">Error occurred finding release</string>
    <string name="text_github" translatable="false">GitHub</string>
    <string name="text_googleplay" translatable="false">Google Play</string>
    <string name="text_fdroid" translatable="false">F-Droid</string>
    <string name="text_openweathermap" translatable="false">OpenWeatherMap</string>
    <string name="text_openmeteo" translatable="false">Open-Meteo</string>
    <string name="onboarding_welcome_text_title">Welcome</string>
    <string name="onboarding_welcome_text_paragraph">Thanks for installing my app! QuickWeather is FREE and Open Source and only available on <a href="https://play.google.com/store/apps/details?id=com.ominous.quickweather">Google Play</a>, <a href="https://f-droid.org/en/packages/com.ominous.quickweather/">F-Droid</a>, and my <a href="https://github.com/TylerWilliamson/QuickWeather/releases">GitHub</a>. If you installed this app from another source, please uninstall it and install the Play Store, F-Droid, or GitHub version.</string>
    <string name="onboarding_welcome_text_thanks">Special Thanks</string>
    <string name="onboarding_welcome_text_thanks_paragraph">QuickWeather is made possible by:\n • <a href="https://openweathermap.org/">OpenWeatherMap</a> and <a href="https://open-meteo.com/">Open-Meteo</a>\n • <a href="https://github.com/amitjakhu/dripicons-weather">Dripicons - Weather</a> by Amit Jakhu\n • <a href="https://www.rainviewer.com/">RainViewer</a>\n • <a href="https://github.com/woxblom/DragListView">ListDragView</a> (<a href="https://github.com/woxblom/DragListView/blob/master/LICENSE">license</a>) by Magnus Woxblom</string>
    <string name="onboarding_welcome_text_policies">Policies</string>
    <string name="onboarding_welcome_text_policies_paragraph">• QuickWeather is free software licensed under the <a href="https://www.gnu.org/licenses/">GNU General Public License</a>\n • Check out the <a href="https://tylerwilliamson.github.io/QuickWeather/PrivacyPolicy">Privacy Policy</a></string>
    <string name="onboarding_location_text_title">Locations</string>
    <string name="onboarding_location_button_other_location">Other Location</string>
    <string name="onboarding_location_button_current_location">This Location</string>
    <string name="onboarding_location_button_edit_desc">Edit</string>
    <string name="onboarding_location_button_clear_desc">Clear</string>
    <string name="onboarding_location_drag_anchor_desc">Drag Anchor</string>
    <string name="onboarding_units_text_title">Units</string>
    <string name="onboarding_units_text_temperature">Temperature</string>
    <string name="onboarding_units_text_wind_speed">Wind Speed</string>
    <string name="onboarding_units_button_celsius">Celsius</string>
    <string name="onboarding_units_button_fahrenheit">Fahrenheit</string>
    <string name="onboarding_units_button_kmh" translatable="false">km/h</string>
    <string name="onboarding_units_button_ms" translatable="false">m/s</string>
    <string name="onboarding_units_button_mph" translatable="false">mph</string>
    <string name="onboarding_units_button_kn" translatable="false">kn</string>
    <string name="onboarding_units_button_bft" translatable="false">bft</string>
    <string name="onboarding_units_button_fts" translatable="false">ft/s</string>
    <string name="onboarding_ui_text_title">UI</string>
    <string name="onboarding_ui_text_theme">Theme</string>
    <string name="onboarding_ui_text_layout">Layout</string>
    <string name="onboarding_ui_button_light">Light</string>
    <string name="onboarding_ui_button_dark">Dark</string>
    <string name="onboarding_ui_button_auto">Auto</string>
    <string name="onboarding_ui_button_layout">Set Layout</string>
    <string name="onboarding_notif_text_title">Notifications</string>
    <string name="onboarding_notif_text_alerts">Weather\nAlerts</string>
    <string name="onboarding_notif_text_weather">Current\nWeather</string>
    <string name="onboarding_button_enabled">Enabled</string>
    <string name="onboarding_button_disabled">Disabled</string>
    <string name="onboarding_ext_text_title">Extensions</string>
    <string name="onboarding_ext_gadgetbridge" translatable="false">Gadgetbridge</string>
    <string name="onboarding_provider_text_title">Weather Provider</string>
    <string name="onboarding_provider_title_click_action">select weather provider</string>
    <string name="onboarding_provider_owm_edittext_hint">OpenWeatherMap API Key</string>
    <string name="onboarding_provider_owm_onecall_text_welcome">You will need an API key from OpenWeatherMap with a "One Call by Call" subscription to the "One Call 3.0" API. If you do not have one, you can sign up for a free API key <a href="https://home.openweathermap.org/subscriptions/unauth_subscribe/onecall_30/base">here</a>. New API keys may take up to a couple of hours to activate and be ready to use.</string>
    <string name="onboarding_provider_openmeteo_apikey_hint">Open-Meteo API Key (optional)</string>
    <string name="onboarding_provider_openmeteo_instance_hint">Open-Meteo Instance (optional)</string>
    <string name="onboarding_provider_openmeteo_text_welcome"><a href="https://open-meteo.com/">Open-Meteo</a> is a Free and Open Source self-hostable weather provider. Open-Meteo does not require an API Key, but <a href="https://open-meteo.com/en/pricing">Open-Meteo Subscribers</a> can use their API Key if they would like to support Open-Meteo. By default, QuickWeather will use the primary Open-Meteo API, but users can choose which Open-Meteo instance to use below. See the <a href="https://github.com/open-meteo/open-meteo">OpenMeteo GitHub repository</a> for more information about hosting your own instance.</string>
    <string name="onboarding_provider_openmeteo_text_warning">Warning: Open-Meteo does not currently provide weather alerts. Please be careful.</string>
    <string name="onboarding_provider_button_testapi">Test API Key</string>
    <string name="onboarding_provider_button_testconnection">Test Connection</string>
    <string name="onboarding_location_mylocation_desc">My Location</string>
    <string name="onboarding_location_map_desc">Map</string>
    <string name="error_gps_disabled">My Location is unavailable because GPS is disabled</string>
    <string name="error_unexpected_api_result">Unexpected API Result</string>
    <string name="error_connecting_api">Error connecting to API</string>
    <string name="error_connecting_geocoder">Error connecting to GeoCoder</string>
    <string name="error_obtaining_weather">Error Obtaining Weather</string>
    <string name="error_network">Network Error</string>
    <string name="error_creating_result">Error Creating Result Object</string>
    <string name="error_null_response">Null Response Received</string>
    <string name="error_null_location">Could not determine location</string>
    <string name="error_no_results">No results</string>
    <string name="channel_alerts_description">Severe Weather Watches and Warnings from your government</string>
    <string name="channel_alerts_name">Weather Alerts</string>
    <string name="channel_persistent_description">Persistent Notification that shows the current weather</string>
    <string name="channel_persistent_name">Current Weather</string>
    <string name="channel_errors_description">Errors which occur while retrieving weather</string>
    <string name="channel_errors_name">Weather Errors</string>
    <string name="channel_background_work_description">Notifications required for expedited background work</string>
    <string name="channel_background_work_name">Background Work</string>
    <string name="snackbar_background_location_notifications">Enable background location to receive notifications for My Location</string>
    <string name="snackbar_background_location_gadgetbridge">Enable background location to update Gadgetbridge for My Location</string>
    <string name="dialog_translation_title">Translation</string>
    <string name="radar_quality_high">High</string>
    <string name="radar_quality_low">Low</string>
    <string name="advanced_radar_quality_text">Radar\nImage Quality</string>
    <string name="advanced_radar_theme">Radar Theme</string>
    <string name="advanced_language_text">Language</string>
    <string name="advanced_title">Advanced Settings</string>
    <string name="advanced_translation">Translation</string>
    <string name="advanced_weather_details">Weather Details</string>
    <string name="advanced_weather_details_expanded">Expanded</string>
    <string name="advanced_weather_details_minimized">Minimized</string>
    <string name="advanced_translation_lt_instance">LibreTranslate Instance</string>
    <string name="advanced_translation_lt_api_key">LibreTranslate API Key</string>
    <string name="advanced_translation_lt_description">Weather alerts can be translated with <a href="https://libretranslate.com/">LibreTranslate</a>. LibreTranslate is an open source machine translation service. Please refer to their <a href="https://github.com/LibreTranslate/LibreTranslate">GitHub repository</a> for instructions on running the service. Alternatively, users can purchase an API Key for use with their default instance.</string>
</resources>