<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_standard"
    android:paddingTop="?attr/actionBarSize"
    android:paddingEnd="@dimen/margin_standard">

    <TextView
        style="@style/onboarding_title"
        android:text="@string/onboarding_welcome_text_title" />

    <com.ominous.quickweather.view.LinkedTextView
        android:id="@+id/onboarding_welcome_text"
        style="@style/onboarding_text"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/margin_double"
        android:text="@string/onboarding_welcome_text_paragraph" />

    <TextView
        style="@style/onboarding_title"
        android:text="@string/onboarding_welcome_text_thanks" />

    <com.ominous.quickweather.view.LinkedTextView
        android:id="@+id/onboarding_welcome_thanks"
        style="@style/onboarding_text"
        android:layout_width="match_parent"
        android:text="@string/onboarding_welcome_text_thanks_paragraph" />

</LinearLayout>