<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2019 - 2024 Tyler Williamson
  ~
  ~   This file is part of QuickWeather.
  ~
  ~   QuickWeather is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   QuickWeather is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with QuickWeather.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/text_locations">
        <menu>
            <group android:checkableBehavior="single" />
        </menu>
    </item>
    <item android:title="@string/text_settings">
        <menu>
            <group
                android:id="@+id/settings_group">
                <item
                    android:id="@+id/menu_settings"
                    android:checked="true"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/text_settings" />
                <item
                    android:id="@+id/menu_check_for_updates"
                    android:checked="true"
                    android:icon="@drawable/ic_download_white_24dp"
                    android:title="@string/text_check_for_updates" />
                <item
                    android:id="@+id/menu_whats_new"
                    android:checked="true"
                    android:icon="@drawable/ic_star_white_24dp"
                    android:title="@string/text_whats_new" />
                <item
                    android:id="@+id/menu_report_a_bug"
                    android:checked="true"
                    android:icon="@drawable/ic_bug_report_white_24dp"
                    android:title="@string/text_report_a_bug" />
                <item
                    android:id="@+id/menu_translation"
                    android:checked="true"
                    android:icon="@drawable/ic_translate_white_24dp"
                    android:title="@string/dialog_translation_title" />
            </group>
        </menu>
    </item>
</menu>