<?xml version="1.0" encoding="utf-8"?><!--
  ~   Copyright 2019 - 2024 Tyler Williamson
  ~
  ~   This file is part of QuickWeather.
  ~
  ~   QuickWeather is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   QuickWeather is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with QuickWeather.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewpager_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_standard"
            android:paddingEnd="@dimen/margin_standard"
            android:shrinkColumns="*"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="2"
                    android:text="@string/advanced_title" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.RowHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advanced_language_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_app_language"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_span="2" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.RowHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advanced_translation" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_translation_settings"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_span="2"
                    android:text="@string/text_settings" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.RowHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advanced_radar_theme" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_radar_theme"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_span="2" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.RowHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advanced_radar_quality_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_radar_high"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_weight="1"
                    android:text="@string/radar_quality_high" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_radar_low"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_weight="1"
                    android:text="@string/radar_quality_low" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/QuickWeather.Text.RowHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advanced_weather_details" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_details_expand_enabled"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_weight="1"
                    android:text="@string/advanced_weather_details_expanded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_details_expand_disabled"
                    style="@style/QuickWeather.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_half"
                    android:layout_weight="1"
                    android:text="@string/advanced_weather_details_minimized" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>